--- a/Research_and_Projects.css
+++ b/Research_and_Projects.css
@@ -31,16 +31,29 @@ ul li a {
   padding-top: 5%;
 }
 
+
+
 h1 {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 100%;
+  color:cadetblue;
 }
 
+#box {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  border-radius: 100px;
+  box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.1);
+  font-size: 150%;
+  float: right;
+}
 
 ul li a:hover {
   transform: scale(1);
+  opacity: 1;
   color:cadetblue;
 }
+
 
 a {
   color: black;
@@ -48,22 +61,11 @@ a {
 }
 
 img{
-  width: 30%;
-  height: 50%;
-  padding: 3%;
+  width: 20%;
+  height: 20%;
+  padding: 1%;
   float: left;
-}
-
-
-p{
-  font-size: 200%;
-  text-align: left;
-}
-
-#paragraph{
-  float: right;
-  width: 60%;
-  padding-top: 5%;
+  padding-left: 10%;
 }
 
 b{
