--- a/Teaching.css
+++ b/Teaching.css
@@ -31,11 +31,20 @@ ul li a {
   padding-top: 5%;
 }
 
+
 h1 {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 100%;
+  color:cadetblue;
 }
 
+#box {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  border-radius: 100px;
+  box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.1);
+  font-size: 150%;
+}
 
 ul li a:hover {
   transform: scale(1);
@@ -45,27 +54,4 @@ ul li a:hover {
 a {
   color: black;
   text-decoration: none;
-}
-
-img{
-  width: 30%;
-  height: 50%;
-  padding: 3%;
-  float: left;
-}
-
-
-p{
-  font-size: 200%;
-  text-align: left;
-}
-
-#paragraph{
-  float: right;
-  width: 60%;
-  padding-top: 5%;
-}
-
-b{
-  color:cadetblue;
 }
