--- a/Drawing.css
+++ b/Drawing.css
@@ -32,7 +32,6 @@ ul li a {
 }
 
 
-
 h1 {
   font-weight: bold;
   font-size: 100%;
@@ -45,15 +44,12 @@ h1 {
   border-radius: 100px;
   box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.1);
   font-size: 150%;
-  float: right;
 }
 
 ul li a:hover {
   transform: scale(1);
-  opacity: 1;
   color:cadetblue;
 }
-
 
 a {
   color: black;
@@ -61,19 +57,6 @@ a {
 }
 
 img{
-  width: 20%;
-  height: 20%;
-  padding: 1%;
-  float: left;
-  padding-left: 10%;
-}
-
-b{
-  color:cadetblue;
-}
-
-#info{
-  float: right;
-  width: 60%;
-  text-align: left;
+  max-width: 40%;
+  max-height: 40%;
 }
