--- a/Teaching.css
+++ b/Teaching.css
@@ -51,7 +51,32 @@ ul li a:hover {
   color:cadetblue;
 }
 
+
 a {
   color: black;
   text-decoration: none;
+}
+
+a.button {
+  background-color: cadetblue;
+  padding: 10px 10px;
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  text-decoration: none;
+  color: white;
+  border-radius: 4px;
+}
+
+
+a.button:hover {
+  transform: scale(1);
+  background-color: orange;
+  padding: 15px 32px;
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  text-decoration: none;
+  color: initial;
+  border-radius: 4px;
 }
