--- a/Research_and_Projects.css
+++ b/Research_and_Projects.css
@@ -69,6 +69,7 @@ a.button {
   text-decoration: none;
   color: white;
   border-radius: 4px;
+  transition: 0.5s;
 }
 
 
@@ -82,6 +83,7 @@ a.button:hover {
   text-decoration: none;
   color: initial;
   border-radius: 4px;
+  transition: 0.5s;
 }
 
 img{
